fix: overflow: hidden zu motto hinzufügen, da contain: paint nicht auf firefox für android unterstützt wird

--- a/sass/inhalt/ansprache/_motto.sass
+++ b/sass/inhalt/ansprache/_motto.sass
@@ -2,6 +2,7 @@
 	display: flex
 	flex-direction: column
 	contain: paint
+	overflow: hidden
 	background-size: 6vmin 6vmin
 	background-image: linear-gradient(to right, grey 1px, transparent 1px), linear-gradient(to bottom, grey 1px, transparent 1px)
 	#autos, #fahrraeder
